--- a/Simple QR Code Maker/Views/SettingsPage.xaml
+++ b/Simple QR Code Maker/Views/SettingsPage.xaml
@@ -129,6 +129,24 @@
                     OffContent="Showing size text"
                     OnContent="Hiding size text" />
 
+                <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" Text="Approximate Maximum Scan distance of QR Code at minimum size" />
+                <TextBlock
+                    Margin="60,0,0,0"
+                    Style="{ThemeResource SubheaderTextBlockStyle}"
+                    Text="{x:Bind ViewModel.MaxScanDistanceText,
+                                  Mode=OneWay}" />
+                <Slider
+                    Width="300"
+                    Margin="0,0,0,20"
+                    HorizontalAlignment="Left"
+                    IsThumbToolTipEnabled="False"
+                    Maximum="5"
+                    Minimum=".1"
+                    StepFrequency="0.1"
+                    Value="{x:Bind ViewModel.MinSizeScanDistanceScaleFactor,
+                                   Mode=TwoWay,
+                                   UpdateSourceTrigger=PropertyChanged}" />
+
                 <TextBlock x:Uid="Settings_About" Style="{ThemeResource SubtitleTextBlockStyle}" />
                 <StackPanel Margin="{StaticResource XSmallTopMargin}">
                     <TextBlock Style="{ThemeResource BodyTextBlockStyle}" Text="{x:Bind ViewModel.VersionDescription, Mode=OneWay}" />
